tests/react_experimental/react_experimental.exp
Error ------------------------------------------------------------------------------------------ startTransition.js:10:7

Cannot call `React.startTransition` because function [1] requires another argument. [incompatible-call]

   startTransition.js:10:7
    10| React.startTransition(); // Error: function requires another argument
              ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:399:42
   399|   declare export function startTransition(() => void): void;
                                                 ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------ useDeferredValue_hook.js:8:30

Cannot call `React.useDeferredValue` because no more than 1 argument is expected by function type [1]. [extra-arg]

   useDeferredValue_hook.js:8:30
     8| React.useDeferredValue(true, {}); // Error: no more than 1 argument is expected by function type
                                     ^^

References:
   <BUILTINS>/react.js:395:43
   395|   declare export function useDeferredValue<T>(value: T): T;
                                                  ^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:7:21

Cannot call `React.useTransition` because no arguments are expected by function type [1]. [extra-arg]

   useTransition_hook.js:7:21
     7| React.useTransition({}); // Error: no arguments are expected by function type
                            ^^

References:
   <BUILTINS>/react.js:397:40
   397|   declare export function useTransition(): [boolean, (() => void) => void];
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:14:2

Cannot cast `isPending` to function type because boolean [1] is incompatible with function type [2]. [incompatible-cast]

   useTransition_hook.js:14:2
    14| (isPending: (() => void) => void); // Error: boolean is incompatible with function type
         ^^^^^^^^^

References:
   <BUILTINS>/react.js:397:45
   397|   declare export function useTransition(): [boolean, (() => void) => void];
                                                    ^^^^^^^ [1]
   useTransition_hook.js:14:13
    14| (isPending: (() => void) => void); // Error: boolean is incompatible with function type
                    ^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:15:2

Cannot cast `startTransition` to boolean because function type [1] is incompatible with boolean [2]. [incompatible-cast]

   useTransition_hook.js:15:2
    15| (startTransition: boolean); // Error: function type is incompatible with boolean
         ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:397:54
   397|   declare export function useTransition(): [boolean, (() => void) => void];
                                                             ^^^^^^^^^^^^^^^^^^^^ [1]
   useTransition_hook.js:15:19
    15| (startTransition: boolean); // Error: function type is incompatible with boolean
                          ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:18:1

Cannot call `startTransition` because function [1] requires another argument. [incompatible-call]

   useTransition_hook.js:18:1
    18| startTransition(); // Error: function requires another argument
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:397:54
   397|   declare export function useTransition(): [boolean, (() => void) => void];
                                                             ^^^^^^^^^^^^^^^^^^^^ [1]



Found 6 errors
